[project]
name = "tokenflood"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Werkmeister",email = "thomas@werkmeister.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm (>=1.78.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
