[project]
name = "tokenflood"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Werkmeister",email = "thomas@werkmeister.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "litellm (>=1.78.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "numpy (>=2.2.6)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "vllm (>=0.11.0,<0.12.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
