[project]
name = "tokenflood"
version = "0.5.1"
description = "Tokenflood is a load testing framework for simulating arbitary loads on instruction-tuned LLMs."
authors = [
    {name = "Thomas Werkmeister",email = "thomas@werkmeister.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "litellm (>=1.78.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "numpy (>=2.2.6)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
]

[tool.poetry.scripts]
tokenflood = "tokenflood.cli:main"

[project.urls]
Homepage = "https://github.com/twerkmeister/tokenflood"
Issues = "https://github.com/twerkmeister/tokenflood/issues"
